...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/main"
                android:layout_weight="1"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/btn_signin"
                android:layout_marginTop="20dp"
                android:background="@color/main"
                android:text="확인"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
...
