<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.MP2019.NDND.circle.Schedule.ScheduleRegisterFormActivity">

    <TextView
        android:id = "@+id/TV_createCircle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text = "New Schedule"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:background="@color/main"/>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TP_time"
        android:layout_below="@+id/TV_createCircle"
        android:amPmTextColor="@color/black"
        android:headerBackground="@color/main"
        android:numbersSelectorColor="@color/main_dark"/>

    <TextView
        android:id = "@+id/TV_schedule_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "name"
        android:textColor="@color/black"
        android:layout_below="@+id/TP_time"
        android:padding="12dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/ET_schedule_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_toRightOf="@+id/TV_schedule_name"
        android:layout_alignBottom="@+id/TV_schedule_name"
        android:hint="일정이름"/>

    <TextView
        android:id = "@+id/TV_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "description"
        android:textColor="@color/black"
        android:layout_below="@+id/ET_schedule_name"
        android:padding="12dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/ET_descripsion"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/TV_description"
        android:layout_alignBottom="@+id/TV_description"
        android:hint="소개 한 마디"/>

    <Button
        android:id = "@+id/Bu_submit_schedule"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text = "확인"
        android:background="@color/main"
        android:textColor="@color/black"
        android:layout_below = "@+id/ET_descripsion"/>

</RelativeLayout>